@@ -16,10 +16,6 @@
 <!-- JavaScript -->
 <script src="samaxesjs.toc-1.5.min.js" type="text/javascript"></script>
 <style type="text/css">
-.auto-style1 {
-	font-family: "Courier New", Courier, monospace;
-	margin-left: 40px;
-}
 </style>
 </head>
 
@@ -856,7 +852,7 @@ Next summer, winter solstice: 21-Jun-2011 10:16 21-Dec-2011 21:29</pre>
 Sunrise, sunset: 06:51 19:30
 </pre>
 	<p>Here's a table of available extended almanac information:</p>
-	<table class="auto-style1" style="width: 60%">
+	<table class="code" style="width: 60%">
 		<tr>
 			<td>previous_equinox</td>
 			<td>next_equinox</td>
@@ -1931,7 +1927,7 @@ class MyAlarm(StdService):
                         ...
 <span class="highlight">                        ('electricity',          'REAL'),</span>
                         ('inTempBatteryStatus',  'REAL')]</pre>
-	<p>The new line has been highlighted in <span class="highlight">yellow</span>.</p>
+	<p>The new line has been <span class="highlight">highlighted</span>.</p>
 	<p>2. <strong>Check permissions.</strong> The reconfiguration utility will create 
 	a new database with the same name as the old, except with the suffix '<span class="code">_new</span>' 
 	attached to the end. Make sure you have the necessary permissions to do this. 
