@@ -631,7 +631,7 @@ Mutating actions will request confirmation before proceeding.</pre>
       Gain:                         -1.000
       Offset:                       -1.000</pre>
 			<p>
-				Values in <span class="highlight">yellow</span> can be 
+				<span class="highlight">Highlighted</span> values can be 
 				changed.</p>
 			<p>
 				For example, to change the archive interval to 10 minutes (600 
