@@ -121,7 +121,7 @@ td {
 	font-size: xx-small;
 }
 .highlight {
-	background-color: #FFFF66;
+	background-color: #FFCC99;
 }
 .center {
 	text-align: center;
